# NumericalExperiment

./: CMakeLists.txt  Derivative.h  EulerMethod.cpp  EulerMethod.h  FunctionOne.cpp  FunctionOne.h  MidpointMethod.cpp  MidpointMethod.h  ObjectiveFunctionOne.cpp  ObjectiveFunctionOne.h  QuasiNewtonMethod.cpp  QuasiNewtonMethod.h  main.cpp
